[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Breadbackup.png" type="Texture" id=1]
[ext_resource path="res://sprites/Toasty.png" type="Texture" id=2]
[ext_resource path="res://sprites/BreadLogo.png" type="Texture" id=3]
[ext_resource path="res://objects/Logo.gd" type="Script" id=4]
[ext_resource path="res://sfx/click.wav" type="AudioStream" id=5]

[node name="Logo" type="HBoxContainer"]
margin_left = 192.0
margin_top = 52.0
margin_right = 448.0
margin_bottom = 134.0
custom_constants/separation = -6
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 70.0
margin_bottom = 82.0
rect_min_size = Vector2( 70, 70 )
rect_pivot_offset = Vector2( 36, 35 )
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_right = 256.0
margin_bottom = 82.0
custom_constants/separation = -1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 10.0
rect_min_size = Vector2( 71, 10 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 192.0
margin_bottom = 61.5
rect_min_size = Vector2( 192, 52.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 192.0
margin_bottom = 76.0

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 16.0
rect_min_size = Vector2( 71, 0 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 191.0
margin_bottom = 16.0
grow_horizontal = 0
rect_min_size = Vector2( 116, 16 )
rect_pivot_offset = Vector2( 58, 8 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]

[node name="TweenBounce" type="Tween" parent="."]

[node name="TweenScale" type="Tween" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="TextureRect" to="." method="_on_BigBread_gui_input"]
